--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
+    "eiows": "^3.4.1",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.1",
     "express-rate-limit": "^5.2.3",
@@ -27,8 +28,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "path": "^0.12.7",
-    "validator": "^13.5.1",
+    "sharp": "^0.26.3",
+    "socket.io": "^3.0.4",
+    "validator": "^13.5.2",
     "xss-clean": "^0.1.1"
   }
 }
