--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Atishey Jain",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.819.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
