--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.1",
     "express-rate-limit": "^5.2.3",
+    "express-session": "^1.17.2",
     "faker": "^5.1.0",
     "helmet": "^4.2.0",
     "hpp": "^0.2.3",
@@ -39,5 +40,4 @@
   "engines": {
     "node": ">=10.0.0"
   }
-  
 }
